# pv207-freshair

./: README.md
camel/: README.md  application.properties  data.db  init_db.sql  integration.yaml
camel/.camel-jbang/: camel-jbang-run.properties
server/: README.md  pyproject.toml
server/app/: main.py
server/app/routers/: dac_router.py  finance_router.py  warehouse_router.py
