[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend for FreshAir processes."
authors = ["Petr Janik <485122@mail.muni.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.2"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
